--- a/Front-MHADFOX/package.json
+++ b/Front-MHADFOX/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^19.1.2",
     "express": "^4.18.2",
     "ngx-owl-carousel-o": "^19.0.0",
+    "notiflix": "^3.2.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
