--- a/Front-MHADFOX/package.json
+++ b/Front-MHADFOX/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.2",
+    "animate.css": "^4.1.1",
     "express": "^4.18.2",
     "ngx-owl-carousel-o": "^19.0.0",
     "notiflix": "^3.2.8",
